feat: added /user/favorites endpoint
