# server/spec/openapi.yaml
@@ -76,6 +76,25 @@ paths:
                 $ref: '#/components/schemas/Recipe'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
+  /user/favorites:
+    get:
+      responses:
+        '200':
+          description: OK
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+    put:
+      responses:
+        '200':
+          description: OK
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+    delete:
+      responses:
+        '200':
+          description: OK
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /user/login:
     post:
       security: []
